# OS-tasks

./: README.md
3_1_oc/: 3_1_oc.vcxproj  3_1_oc.vcxproj.filters  MarkerApp.h  main.cpp
3_oc_final2/: 3_oc_final2.sln  3_oc_final2.vcxproj  3_oc_final2.vcxproj.filters  MarkerApp.cpp  MarkerApp.h  README.cd  main.cpp
3_os_final/: 3_os_final.cpp  3_os_final.sln  3_os_final.vcxproj  3_os_final.vcxproj.filters  MarkerApp.cpp  README.md
LAB_4/: LAB_4.sln
LAB_4.1/: LAB_4.1.sln  README.md
LAB_4.1/LAB_4.1/: LAB_4.1.cpp  LAB_4.1.vcxproj  LAB_4.1.vcxproj.filters
LAB_4.1/Sender/: Sender.cpp  Sender.vcxproj
LAB_4.1/tests/: test.cpp  tests.vcxproj
LAB_4/LAB_4/: LAB_4.cpp  LAB_4.vcxproj  LAB_4.vcxproj.filters
LAB_4/Sender/: Sender.cpp  Sender.vcxproj
LAB_4/tests/: test.cpp  tests.vcxproj
lab1_oc/: README.md  lab1_oc.sln
lab1_oc/Creator/: Creator.cpp  Creator.vcxproj
lab1_oc/Reporter/: Reporter.cpp  Reporter.vcxproj
lab1_oc/lab1_oc/: abcd  asdddd  data  dfg.txt.txt  efrg  in  kgfrdl  lab1_oc.cpp  lab1_oc.vcxproj  lab1_oc.vcxproj.filters  report.txt  report.txt.txt  Їа®.ЈЁЈ.txt  (+1 more)
lab2_cmake/: CMakeLists.txt
lab2_cmake/lab2_cmake/: CMakeLists.txt  lab2_cmake.cpp  lab2_cmake.h
lab2_oc/: README.md  lab2_oc.cpp  lab2_oc.h  lab2_oc.sln
lab2_oc_1/: CMakeLists.txt  lab2.cpp
lab5_oc/: README.md  client.cpp  client.vcxproj  lab5.cpp  lab5_oc.sln  lab5_oc.vcxproj  testss.vcxproj
lab_5_1_oc/: client.cpp.cpp  client.cpp.vcxproj  client.cpp.vcxproj.filters  lab_5_1_oc.cpp  lab_5_1_oc.sln  lab_5_1_oc.vcxproj  lab_5_1_oc.vcxproj.filters  test.cpp  testsssss.vcxproj
(+50 files in other folders)
